--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "gatsby": "^4.17.2",
+    "gatsby-plugin-client-side-redirect": "^1.1.0",
     "gatsby-plugin-feed": "^4.17.0",
     "gatsby-plugin-gatsby-cloud": "^4.17.0",
     "gatsby-plugin-google-analytics": "^4.17.0",
